--- a/react-app/package.json
+++ b/react-app/package.json
@@ -2,6 +2,7 @@
   "name": "kuku-crafts-cooking-frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/wp-content/themes/kuku-child/react-build",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -14,7 +15,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && rsync -a build/ ../themes/kuku-child/react-build/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
