--- a/app/public/wp-content/react-app/package.json
+++ b/app/public/wp-content/react-app/package.json
@@ -10,14 +10,15 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && mkdir -p ../themes/kuku-child/react-build && rsync -a build/ ../themes/kuku-child/react-build/",
+    "build": "vite build && mkdir -p ../themes/kuku-child/react-build && rsync -a build/ ../themes/kuku-child/react-build/",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "vite",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -37,5 +38,13 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://kuku-crafts-cooking.local/"
+  "proxy": "http://kuku-crafts-cooking.local/",
+  "devDependencies": {
+    "@types/node": "^24.0.3",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.5.2",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5"
+  }
 }
