--- a/app/public/wp-content/react-app/Dockerfile
+++ b/app/public/wp-content/react-app/Dockerfile
@@ -2,13 +2,15 @@
 FROM node:18 AS builder
 
 WORKDIR /app
+RUN apt-get update && apt-get install -y rsync
+
 COPY . .
 
 RUN npm install && npm run build
 
 # Serve using Nginx
 FROM nginx:alpine
-COPY --from=builder /app/dist /usr/share/nginx/html
+COPY --from=builder /app/build /usr/share/nginx/html
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
