--- a/app/public/wp-content/react-app/Dockerfile
+++ b/app/public/wp-content/react-app/Dockerfile
@@ -4,14 +4,11 @@ FROM node:18 AS builder
 WORKDIR /app
 COPY . .
 
-# Install rsync for use in post-build step
+# ✅ Install rsync BEFORE build
 RUN apt-get update && apt-get install -y rsync
 
 RUN npm ci
 RUN npm run build
 
-# ─── Stage 2: (optional) Serve with Nginx or just export ───────
-# FROM nginx:alpine
-# COPY --from=builder /app/build /usr/share/nginx/html
-# EXPOSE 80
-# CMD ["nginx", "-g", "daemon off;"]
+# ✅ Copy to /app/output (not nested inside `build`)
+RUN mkdir /app/output && cp -r build/* /app/output/
